--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   - task: NuGetToolInstaller@1
     name: 'NuGetToolInstaller'
     inputs: 
-      versionSpec: '4.8'
+      versionSpec: '4.x'
     displayName: 'NuGet tool installer'
 
   - task: NuGetCommand@2
@@ -29,17 +29,13 @@ steps:
       command: 'restore'
       restoreSolution: '$(solution)'
       feedsToUse: 'select'
-      
-  - task: DotNetCoreCLI@2
-    name: 'Publish'
-    displayName: 'Publish'
-    inputs:
-      command: 'publish'
-      publishWebProjects: false
-      projects: '$(project)'
-      arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-      zipAfterPublish: false
 
+  - task: VSBuild@1
+    inputs:
+      solution: '$(solution)'
+      msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+      platform: '$(buildPlatform)'
+      configuration: '$(buildConfiguration)'
   - task: PublishBuildArtifacts@1
     name: 'PublishBuildArtifacts'
     displayName: 'Publish build artifacts'
