--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,7 +25,7 @@ stages:
     jobs:   
     - deployment: DeployWebsite
       displayName: 'Deploy website'
-      environment: 'Windows 11 server.DAVE'
+      environment: 'Test-ewallet.e-wallet'
       strategy:
        runOnce:
          deploy:          
@@ -50,7 +50,7 @@ stages:
             displayName: 'Deploy IIS website - ${{ variables.IISWebsiteName }}'         
             inputs:
               WebSiteName: '${{ variables.IISWebsiteName }}'             
-              Package: '$(Pipeline.Workspace)\buildPipeline\AzureTestProject\RoundTheCode.AzureTestProject'
+              Package: '$(Pipeline.Workspace)\buildPipeline\AzureTestProject\*.AzureTestProject'
               TakeAppOfflineFlag: true
            
           - task: IISWebAppManagementOnMachineGroup@0
