Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,7 +12,7 @@ variables:
 resources:
   pipelines:
   - pipeline: 'buildPipeline'
-    project: 'AzureTestProject'
+    project: 'app-service-webz'
     source: 'Build pipeline'
     branch: 'main'   
  
